﻿25.5.15
=======
 + Added option to force Vulkan Mailbox Presentation Mode
 + Override Vulkan Presentation Mode to Immediate if Presentation Interval=0
 + Use Mailbox Presentation Mode instead of Immediate when AllowTearing=false

25.5.14
=======
 + Added INI settings to control whether RawInput Keyboards/Mice are allowed
     to disable legacy messages (default=yes) or disable hotkeys (default=yes).

   * Sometimes it is necessary to prevent disabling legacy messages for
       some third-party overlays/mods to work with keyboard/mouse input
         (frequently in Bethesda games such as Fallout or Elder Scrolls).

25.5.12.8
=========
 + Added support for (most) DLSS functionality in Vulkan.

     >> Native Pacing mode and DLSS-G Pacing are both non-functional.
        
    * How much of that is due to DOOM's broken Reflex code is not clear yet.

25.5.12.7
=========
 + Remove forced Vulkan bridge setting from DOOM The Dark Ages, it already
     uses DXGI interop...

25.5.12.6
=========
 + Disable minimumIntervalUs override in Vulkan Reflex for VRR displays.

25.5.12.5
=========
 + Added Vulkan-based Reflex (NvLowLatencyVk.dll) latency analysis and override
     support for games that natively support it.
   * VK_NV_low_latency2 analysis and non-native Reflex injection unsupported.

25.5.12.4
=========
 + Disable Streamline debug output in DOOM The Dark Ages, because it causes a
     debug terminal to spawn.
 + Added window activation hack for DOOM The Dark Ages to ensure that DualSense
     controllers behave correctly after hot-plug.

25.5.12.3
=========
 + Since Reflex is broken in DOOM The Dark Ages, whenever the game is set to
     Low Latency mode on a VRR display, SK will force the correct framerate.

   * User may supply a custom framerate limit even lower, but SK will enforce
       the same upper-limit that Reflex normally would if it actually worked.

25.5.12.2
=========
 + Add Vulkan extension hooks to disable Flip Metering in DOOM The Dark Ages.